fix(RPagination): the height is not correct on IE11

--- a/packages/recomponents/src/components/r-pagination/r-pagination-control.scss
+++ b/packages/recomponents/src/components/r-pagination/r-pagination-control.scss
@@ -3,6 +3,7 @@
     flex-flow: column;
     margin: 0 auto;
     width: fit-content;
+    height: 36px; // fix the bugs on IE11
 }
 
 .r-pagination-control-wrapper {
